# TA-generic_edr

./: .gitignore  README.md  pyproject.toml
README/: inputs.conf.spec
default/: app.conf  inputs.conf
lib/: .gitignore
lib/genedr/: __init__.py  api.py  base.py  baseclient.py  types.py
